<resources>
    <string name="app_name">Acastus</string>

    <string name="action_settings">Settings</string>

    <string name="action_share_location">Share Location</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_header_server">Server</string>

    <string name="allow_location_title">Allow Location</string>
    <string name="allow_location_description">Use your location to return results near you.</string>

    <string name="unit_length_title">Use kilometers</string>
    <string name="unit_lenth_description">Use kilometers instead of miles.</string>

    <string name="use_google_title">Use Google Maps URL</string>
    <string name="use_google_description">Use Google Maps URL instead of the Geo link type.</string>

    <string name="store_recents_title">Save Recents</string>
    <string name="store_recents_description">Save recent results for later use.</string>

    <string name="pref_title_app_theme">App Theme</string>
    <string name="pref_description_app_theme">Use Dark Theme</string>


    <string name="server_url_setting">Server Address</string>

    <string name="server_url_default" translatable="false">https://search.mapzen.com</string>

    <string name="api_key_setting" translatable="false">API Key</string>

    <string name="clear_recents_setting">Clear Recents</string>

    <string name="need_nav_app">You must have a Maps/Navigation App installed.</string>

    <string name="my_current_location">My Current Location</string>

    <string name="shared_location">Shared Location</string>

    <string name="navigate">Navigate</string>

    <string name="copy_address_place">Copy address/place to clipboard</string>

    <string name="copy_gps">Copy GPS coordinates to clipboard</string>

    <string name="share_this_location">Share this location</string>

    <string name="share_my_location">Share my location</string>

    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="search_address_place">Search for address/place</string>

    <string name="share_address_place">Share address/place</string>

    <string name="accessing_location">Accessing location...</string>

    <string name="location_not_enabled">Location not enabled</string>

    <string name="donate_button">Donate</string>

</resources>
